
8.42  2020-05-01
  - Added EXPERIMENTAL support for :any-link pseudo-class to Mojo::DOM::CSS.
  - Renamed experimental :matches pseudo-class to :is in Mojo::DOM::CSS.
  - Fixed a bug in Mojo::DOM::CSS where the case-sensitivity identifier was
    case-sensitive.

8.41  2020-04-30
  - Improved Mojolicious::Commands to treat commands like
    "mojo generate lite_app" as "mojo generate lite-app".

8.40  2020-04-23
  - Fixed support for disabling the inactivity timeout in Mojo::UserAgent.

8.39  2020-04-22
  - Fixed a bug in Mojo::Server::Daemon where active connections could get the
    keep-alive timeout assigned instead of the inactivity timeout.
  - Fixed a race condition in Mojo::UserAgent where test servers would close
    connections prematurely.

8.38  2020-04-21
  - Added run_p method to Mojo::IOLoop::Subprocess. (batman)

8.37  2020-04-19
  - Added keep_alive_timeout attribute to Mojo::Server::Daemon.
  - Added -k options to daemon and prefork commands.
  - Added keep_alive_timeout setting to Hypnotoad.
  - Increased various default timeouts because keep_alive_timeout takes over
    some of their previous responsibility.
  - Improved timeout setting performance significantly in Mojo::IOLoop::Stream.
  - Improved again method in Mojo::Reactor, Mojo::Reactor::EV and
    Mojo::Reactor::Poll to allow changing the invocation time of active timers.
  - Fixed support for 425 status in Mojo::Message::Response.

8.36  2020-03-31
  - Added handler attribute to Test::Mojo.
  - Added test method to Test::Mojo.
  - Improved Test::Mojo to allow for extensions to be tested more easily.
  - Improved request_id attribute in Mojo::Message::Request to be a little more
    unique. (mst)

8.35  2020-03-20
  - Added not_empty filter to Mojolicious::Validator.

8.34  2020-03-16
  - Removed experimental status from proxy->get_p, proxy->post_p and
    proxy->start_p helpers in Mojolicious::Plugin::DefaultHelpers.