@@ -1,6 +1,8 @@
 
 8.42  2020-05-01
   - Added EXPERIMENTAL support for :any-link pseudo-class to Mojo::DOM::CSS.
+  - Added EXPERIMENTAL support for case-sensitive attribute selectors like
+    [foo="bar" s] to Mojo::DOM::CSS
   - Renamed experimental :matches pseudo-class to :is in Mojo::DOM::CSS.
   - Fixed a bug in Mojo::DOM::CSS where the case-sensitivity identifier was
     case-sensitive.
